#41 Fixed credit box. Removed the wrap. Implemented a more expander.

--- a/src/Aria.App/Resources/style.css
+++ b/src/Aria.App/Resources/style.css
@@ -16,4 +16,5 @@
 
 .artist-link {
     padding: 2px 4px;
+    font-weight: normal;
 }
